# Hackathon-TUM

./: .gitignore  README.md  apply_prediction_filter.py  backend_runtime_requirements.txt  colab_demo.ipynb  config.yaml  download_abdul_testrun_data.py  download_sample_data.py  jupyter_demo.ipynb  prithvi.py  requirements-gpu.txt  requirements.txt  run_abdul_model.py  run_frontend_backend.py  run_frontend_dev.py
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: aef_service.py  config.py  main.py  ml_service.py
frontend/: .env.example  .env.production.example  .vercelignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ActivityFeed.tsx  BandSlider.tsx  ConfusionMatrix.tsx  InsightsPanel.tsx  LabelComparisonCard.tsx  LayerToggle.tsx  MetricsCard.tsx  MislabelList.tsx  PcaPreviewImage.tsx  PlotMapPanel.tsx  PlotSelector.tsx  PredictionCard.tsx  RegionFilter.tsx  RiskBreakdownPanel.tsx  StatusBadge.tsx  SummaryCard.tsx  TileYearPicker.tsx  TimeSeriesChart.tsx  ValidationPanel.tsx
model-training/: Final_file.ipynb  Makefile  README.md  SOLUTION.md  requirements.txt  run_aef.py  run_solution.py
model-training/alphaearth/: __init__.py  cache.py  classifiers.py  io.py  mislabels.py  paths.py  previews.py  scatter.py
model-training/solution/: __init__.py  config.py  data_loader.py  features.py  labels.py  model.py  predict.py  submit.py
scripts/: check_gpu.py
(+46 files in other folders)
