[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3~=1.34",
    "botocore>=1.42.91",
    "fastapi>=0.136.0",
    "geopandas~=1.0.0",
    "ipykernel>=7.2.0",
    "joblib~=1.4",
    "jupyter>=1.1.1",
    "matplotlib~=3.9.0",
    "numpy~=1.26.4",
    "pandas~=2.2.2",
    "rasterio~=1.4.3",
    "scikit-learn~=1.5",
    "shapely~=2.0.3",
    "torch>=2.11.0",
    "tqdm~=4.66",
    "uvicorn[standard]>=0.44.0",
]
